doc(readme): update readme with some basic usage and deploy

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,3 +24,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.gh_token }}
         uses: codfish/semantic-release-action@v1
+      - name: Release with Maven
+        if: steps.semantic.outputs.new-release-published == 'true'
+        run: ./mvnw -Drevision=$RELEASE_VERSION clean deploy
